--- a/sip/sip.yaml
+++ b/sip/sip.yaml
@@ -1,1 +1,11 @@
 git: git@github.com:leaderli/python-tips.git
+
+hello:
+    test: 123
+    list:
+      - 1
+      - 2
+      - 3
+    map:
+      k1: k1
+      k2: k2
